Upgrade to 1.19.1, make adjustments and update tests in conjunction