@@ -25,92 +25,49 @@ package com.casewalker.narratorconfigs.mixin;
 
 import com.casewalker.modutils.config.ConfigHandler;
 import com.casewalker.narratorconfigs.config.NarratorConfigsModConfig;
-import net.minecraft.network.message.MessageSender;
-import net.minecraft.network.message.MessageType;
 import net.minecraft.text.Text;
 import net.minecraft.util.Pair;
-import net.minecraft.util.registry.RegistryKey;
-import org.easymock.EasyMock;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
-import org.junit.runner.RunWith;
-import org.powermock.api.easymock.PowerMock;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.core.classloader.annotations.SuppressStaticInitializationFor;
-import org.powermock.modules.junit4.PowerMockRunner;
+import org.junit.jupiter.api.Test;
 import org.powermock.reflect.Whitebox;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 import java.nio.file.Path;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static com.casewalker.narratorconfigs.testutils.TestUtils.DummyNarrator;
 import static com.casewalker.narratorconfigs.testutils.TestUtils.NarratorManagerMixinTestImpl;
-import static com.casewalker.narratorconfigs.testutils.TestUtils.assertFalse;
-import static com.casewalker.narratorconfigs.testutils.TestUtils.assertTrue;
-import static net.minecraft.network.message.MessageType.NarrationRule.Kind.CHAT;
-import static net.minecraft.network.message.MessageType.NarrationRule.Kind.SYSTEM;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * Tests on the {@link NarratorManagerMixinNCM2} for the {@link
- * NarratorManagerMixinNCM2#onNarrateNCM2(String, CallbackInfo)} and {@link
- * NarratorManagerMixinNCM2#onOnChatMessageNCM2(MessageType, Text, MessageSender, CallbackInfo)} functionality.
- *
- * This class is using JUnit4 and the {@link PowerMockRunner} in order to mock {@link MessageType}. I could not find a
- * way around this using JUnit5. Thus the usage of {@link DisplayName} is defunct, but a boy can dream.
+ * Tests the functionality of {@link NarratorManagerMixinNCM2#onNarrateNCM2(String, CallbackInfo)}, {@link
+ * NarratorManagerMixinNCM2#onNarrateChatMessageNCM2(Supplier, CallbackInfo)}, and {@link
+ * NarratorManagerMixinNCM2#forceNarrateOnMode(Text)}.
  *
  * @author Case Walker
  */
-@PrepareForTest({
-        MessageType.class,
-        MessageType.NarrationRule.class,
-        RegistryKey.class
-})
-@SuppressStaticInitializationFor("net.minecraft.util.registry.Registry")
-@RunWith(PowerMockRunner.class)
 public class NarratorManagerMixinNarrationMethodsTest {
 
-    private static NarratorManagerMixinTestImpl narratorManagerMixin;
+    private static final NarratorManagerMixinTestImpl narratorManagerMixin = new NarratorManagerMixinTestImpl();
     private static ConfigHandler<NarratorConfigsModConfig> config;
-    private static MessageType chatType;
-    private static MessageType systemType;
     private static DummyNarrator narrator;
 
-    @BeforeClass
-    public static void initializeDependencies() {
-        narratorManagerMixin = PowerMock.createPartialMock(NarratorManagerMixinTestImpl.class, "narratorModeIsCustomNarration");
+    @BeforeAll
+    static void initializeDependencies() {
         config = new ConfigHandler<>(NarratorConfigsModConfig.class);
         config.initialize(List.of(Path.of("src", "test", "resources", "narratorconfigsmod.json")));
         Whitebox.setInternalState(narratorManagerMixin, "config", config);
         narrator = new DummyNarrator();
-
-        // This remaining nonsense is because Mojang introduced "MessageType" as a Record (I believe serialized) for
-        // 1.19, and it proved to be very difficult to mock. Mockito complained, PowerMockRunner doesn't exist for
-        // JUnit5, so I had to downgrade to JUnit4, put the "add-exports" and "add-opens" in gradle, etc.
-        // It's giving depression. But now it should work.
-        PowerMock.mockStatic(RegistryKey.class);
-        EasyMock.expect(RegistryKey.of(EasyMock.anyObject(), EasyMock.anyObject())).andStubReturn(null);
-        PowerMock.replay(RegistryKey.class);
-
-        final Optional<MessageType.NarrationRule> chatRule = Optional.of(MessageType.NarrationRule.of(CHAT));
-        final Optional<MessageType.NarrationRule> systemRule = Optional.of(MessageType.NarrationRule.of(SYSTEM));
-        chatType = PowerMock.createMock(MessageType.class, Optional.empty(), Optional.empty(), chatRule);
-        systemType = PowerMock.createMock(MessageType.class, Optional.empty(), Optional.empty(), systemRule);
-
-        EasyMock.expect(chatType.narration()).andStubReturn(Optional.of(MessageType.NarrationRule.of(CHAT)));
-        EasyMock.expect(systemType.narration()).andStubReturn(Optional.of(MessageType.NarrationRule.of(SYSTEM)));
-        PowerMock.replayAll(chatType, systemType);
     }
 
-    @Before
-    public void reset() {
-        EasyMock.reset(narratorManagerMixin);
+    @BeforeEach
+    void reset() {
         narrator.reset();
         narratorManagerMixin.setNarrator(narrator);
         config.get().setChatEnabled(false);
@@ -120,20 +77,21 @@ public class NarratorManagerMixinNarrationMethodsTest {
     }
 
     @Test
-    @DisplayName("Nothing is narrated by the mixin if the mode is not CUSTOM_NARRATION (onOnChatMessage, onNarrate)")
-    public void testNarrationWrongMode() {
+    @DisplayName("Nothing is narrated by the mixin if the mode is not CUSTOM_NARRATION " +
+            "(onNarrateChatMessage, onNarrate)")
+    void testNarrationWrongMode() {
         config.get().setChatEnabled(true);
         narrator.active = true;
-        setupIsCustomNarrationModeExpectation(false);
+        narratorManagerMixin.narratorModeIsCustom = false;
         CallbackInfo onNarrateCI = new CallbackInfo("test", true);
         CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
 
         narratorManagerMixin.onNarrateNCM2("text1", onNarrateCI);
-        narratorManagerMixin.onOnChatMessageNCM2(chatType, Text.of("text2"), null, onOnChatMessageCI);
+        narratorManagerMixin.onNarrateChatMessageNCM2(() -> Text.of("text2"), onOnChatMessageCI);
 
         assertTrue(narrator.thingsSaid.isEmpty(),
                 "Narrator should not get any narrations if mode is not CUSTOM_NARRATION, things said: " +
-                        narrator.thingsSaid.stream().map(Pair::getLeft).collect(Collectors.toList()));
+                        narrator.thingsSaid.stream().map(Pair::getLeft).toList());
         assertFalse(onNarrateCI.isCancelled(), "If the custom narration is not executed, Minecraft " +
                 "'narrate' should be, and so the CallbackInfo should not be cancelled");
         assertFalse(onOnChatMessageCI.isCancelled(), "If the custom narration is not executed, Minecraft " +
@@ -141,36 +99,50 @@ public class NarratorManagerMixinNarrationMethodsTest {
     }
 
     @Test
-    @DisplayName("Nothing is narrated if the narrator is not active (onOnChatMessage, onNarrate)")
-    public void testNarratorInactive() {
+    @DisplayName("Nothing is narrated if the narrator is not active (onNarrate)")
+    void testNarratorInactive() {
         config.get().setChatEnabled(true);
         narrator.active = false;
-        setupIsCustomNarrationModeExpectation(true);
+        narratorManagerMixin.narratorModeIsCustom = true;
         Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
         CallbackInfo onNarrateCI = new CallbackInfo("test", true);
-        CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
 
         narratorManagerMixin.onNarrateNCM2("text1", onNarrateCI);
-        narratorManagerMixin.onOnChatMessageNCM2(chatType, Text.of("text2"), null, onOnChatMessageCI);
 
         assertTrue(narrator.thingsSaid.isEmpty(),
                 "Narrator should not get any narrations when narrator is not active: " +
-                        narrator.thingsSaid.stream().map(Pair::getLeft).collect(Collectors.toList()));
+                        narrator.thingsSaid.stream().map(Pair::getLeft).toList());
         assertTrue(onNarrateCI.isCancelled(), "If the custom narration is executed, even with narration set " +
                 "to be inactive, the CallbackInfo should be cancelled");
+    }
+
+    @Test
+    @DisplayName("Narration succeeds if the narrator is not active? Odd behavior. (onNarrateChatMessage)")
+    void testNarratorInactiveChat() {
+        config.get().setChatEnabled(true);
+        narrator.active = false;
+        narratorManagerMixin.narratorModeIsCustom = true;
+        Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
+        CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
+
+        narratorManagerMixin.onNarrateChatMessageNCM2(() -> Text.of("text2"), onOnChatMessageCI);
+
+        assertFalse(narrator.thingsSaid.isEmpty(), "Narrator should get called with things to say");
+        assertFalse(narrator.thingsSaid.get(0).getRight(), "Interrupt on narration should be false");
         assertTrue(onOnChatMessageCI.isCancelled(), "If the custom narration is executed, even with " +
                 "narration set to be inactive, the CallbackInfo should be cancelled");
     }
 
     @Test
-    @DisplayName("Chat narration succeeds (interrupt false) if the mode is right and chat is enabled (onOnChatMessage)")
-    public void testChatSucceeds() {
+    @DisplayName("Chat narration succeeds (interrupt false) if the mode is right and chat is enabled " +
+            "(onNarrateChatMessage)")
+    void testChatSucceeds() {
         config.get().setChatEnabled(true);
         narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
+        narratorManagerMixin.narratorModeIsCustom = true;
         CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
 
-        narratorManagerMixin.onOnChatMessageNCM2(chatType, Text.of("text2"), null, onOnChatMessageCI);
+        narratorManagerMixin.onNarrateChatMessageNCM2(() -> Text.of("text2"), onOnChatMessageCI);
 
         assertFalse(narrator.thingsSaid.isEmpty(), "Narrator should get called with things to say");
         assertFalse(narrator.thingsSaid.get(0).getRight(), "Interrupt on narration should be false");
@@ -179,14 +151,14 @@ public class NarratorManagerMixinNarrationMethodsTest {
     }
 
     @Test
-    @DisplayName("Chat narration does not occur if the mode is right and chat is disabled (onOnChatMessage)")
-    public void testNoNarrationIfChatIsDisabled() {
+    @DisplayName("Chat narration does not occur if the mode is right and chat is disabled (onNarrateChatMessage)")
+    void testNoNarrationIfChatIsDisabled() {
         config.get().setChatEnabled(false);
         narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
+        narratorManagerMixin.narratorModeIsCustom = true;
         CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
 
-        narratorManagerMixin.onOnChatMessageNCM2(chatType, Text.of("text2"), null, onOnChatMessageCI);
+        narratorManagerMixin.onNarrateChatMessageNCM2(() -> Text.of("text2"), onOnChatMessageCI);
 
         assertTrue(narrator.thingsSaid.isEmpty(), "Chat is disabled, narrator should not get called");
         assertTrue(onOnChatMessageCI.isCancelled(), "If the custom narration is executed, even if chat is disabled, " +
@@ -194,15 +166,15 @@ public class NarratorManagerMixinNarrationMethodsTest {
     }
 
     @Test
-    @DisplayName("System messages should narrate if chat is disabled and the text is accepted (onOnChatMessage)")
-    public void testNarrationIfChatIsDisabledButSystemMessageMatches() {
-        config.get().setChatEnabled(false);
+    @DisplayName("Chat messages should narrate if chat is enabled regardless of what's accepted (onNarrateChatMessage)")
+    void testNarrationIfChatIsEnabledEvenOnNoMatch() {
+        config.get().setChatEnabled(true);
         narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
+        narratorManagerMixin.narratorModeIsCustom = true;
         Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
         CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
 
-        narratorManagerMixin.onOnChatMessageNCM2(systemType, Text.of("testing"), null, onOnChatMessageCI);
+        narratorManagerMixin.onNarrateChatMessageNCM2(() -> Text.of("wrong message, not accepted"), onOnChatMessageCI);
 
         assertFalse(narrator.thingsSaid.isEmpty(), "System message that matches should be narrated");
         assertTrue(onOnChatMessageCI.isCancelled(),
@@ -210,43 +182,10 @@ public class NarratorManagerMixinNarrationMethodsTest {
     }
 
     @Test
-    @DisplayName("System messages should not narrate if chat is disabled but the text isn't accepted (onOnChatMessage)")
-    public void testNoNarrationIfChatIsDisabledAndSystemMessageDoesNotMatch() {
-        config.get().setChatEnabled(false);
-        narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
-        Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
-        CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
-
-        narratorManagerMixin.onOnChatMessageNCM2(systemType, Text.of("not testing dude"), null, onOnChatMessageCI);
-
-        assertTrue(narrator.thingsSaid.isEmpty(), "System message that doesn't match should not get narrated");
-        assertTrue(onOnChatMessageCI.isCancelled(), "If the custom narration is executed, even if nothing is " +
-                "narrated, the CallbackInfo should be cancelled");
-    }
-
-    @Test
-    @DisplayName("System messages should not narrate even if chat is enabled but the text isn't accepted " +
-            "(onOnChatMessage)")
-    public void testNoNarrationIfChatIsEnabledAndSystemMessageDoesNotMatch() {
-        config.get().setChatEnabled(true);
-        narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
-        Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
-        CallbackInfo onOnChatMessageCI = new CallbackInfo("test", true);
-
-        narratorManagerMixin.onOnChatMessageNCM2(systemType, Text.of("not testing either"), null, onOnChatMessageCI);
-
-        assertTrue(narrator.thingsSaid.isEmpty(), "System message that doesn't match should not get narrated");
-        assertTrue(onOnChatMessageCI.isCancelled(), "If the custom narration is executed, even if nothing is " +
-                "narrated, the CallbackInfo should be cancelled");
-    }
-
-    @Test
     @DisplayName("Narration succeeds if the string matches the accepted narrations (onNarrate)")
-    public void testNarrationSucceedsWithRightText() {
+    void testNarrationSucceedsWithRightText() {
         narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
+        narratorManagerMixin.narratorModeIsCustom = true;
         Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
         CallbackInfo onNarrateCI = new CallbackInfo("test", true);
 
@@ -259,9 +198,9 @@ public class NarratorManagerMixinNarrationMethodsTest {
 
     @Test
     @DisplayName("Nothing is narrated if the string does not match an accepted narration (onNarrate)")
-    public void testNoNarrationIfNoMatch() {
+    void testNoNarrationIfNoMatch() {
         narrator.active = true;
-        setupIsCustomNarrationModeExpectation(true);
+        narratorManagerMixin.narratorModeIsCustom = true;
         Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
         CallbackInfo onNarrateCI = new CallbackInfo("test", true);
 
@@ -272,13 +211,39 @@ public class NarratorManagerMixinNarrationMethodsTest {
                 "accepted, the CallbackInfo should be cancelled");
     }
 
-    /**
-     * Helper method to set up the partial {@link NarratorManagerMixinNCM2} mock.
-     *
-     * @param result The desired result for the {@link NarratorManagerMixinNCM2#narratorModeIsCustomNarration()} method
-     */
-    private void setupIsCustomNarrationModeExpectation(final boolean result) {
-        EasyMock.expect(narratorManagerMixin.narratorModeIsCustomNarration()).andStubReturn(result);
-        EasyMock.replay(narratorManagerMixin);
+    @Test
+    @DisplayName("System message should not narrate if the text is accepted but the mode is wrong (forceNarrateOnMode)")
+    void testNoNarrationIfSystemMessageMatchesWithBadMode() {
+        narratorManagerMixin.narratorModeIsCustom = false;
+        Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
+
+        boolean narrated = narratorManagerMixin.forceNarrateOnMode(Text.of("testing"));
+
+        assertTrue(narrator.thingsSaid.isEmpty(), "System message should not get narrated with wrong mode");
+        assertFalse(narrated, "Since nothing was narrated, method should return false");
+    }
+
+    @Test
+    @DisplayName("System message should not narrate if the text isn't accepted (forceNarrateOnMode)")
+    void testNoNarrationIfSystemMessageDoesNotMatch() {
+        narratorManagerMixin.narratorModeIsCustom = true;
+        Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
+
+        boolean narrated = narratorManagerMixin.forceNarrateOnMode(Text.of("not testing dude"));
+
+        assertTrue(narrator.thingsSaid.isEmpty(), "System message that doesn't match should not get narrated");
+        assertFalse(narrated, "Since nothing was narrated, the method should return false");
+    }
+
+    @Test
+    @DisplayName("System message should narrate if the text is accepted and the mode is right (forceNarrateOnMode)")
+    void testNarrationSucceedsWithRightTextAndMode() {
+        narratorManagerMixin.narratorModeIsCustom = true;
+        Whitebox.setInternalState(narratorManagerMixin, "acceptedNarrations", Set.of(Pattern.compile("^testing$")));
+
+        boolean narrated = narratorManagerMixin.forceNarrateOnMode(Text.of("testing"));
+
+        assertFalse(narrator.thingsSaid.isEmpty(), "Narrator should get called with things to say");
+        assertTrue(narrated, "If narration succeeded, the method should return true");
     }
 }
